2008-06-20 Dodji Seketeli <dodji@gnome.org>

	* src/common/nmv-conf-manager.cc, src/common/nmv-log-stream.cc,
	  src/dbgengine/nmv-gdb-engine.cc: don't use getenv, but rather
	  g_getenv(). It's supposed to be more portable.
	  This patch is a courtesy of Christophe Fergeau <teuf@gnome.org>.
	  It has been filed at bug #539314 – Use g_getenv instead of getenv.

2008-06-20 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc: 
	  (GDBEngine::load_program()): don't set LD_BIND_NOW by default.
	  Now, the NMV_LD_BIND_NOW env variable has to be set to 1 when you
	  want to instruct gdb to set LD_BIND_NOW.
	  This should fix: #539311 - rhythmbox can loads its plugins under nemiver

2008-06-19 Dodji Seketeli <dodji@gnome.org>

	* src/persp/dbgperspective/nmv-local-vars-inspector2.cc:
	  (Priv::re_init_tree_view()): don't forget to clean the
	  variable walkers as well as the widget. Otherwise, the content of
	  the walker won't reflect the content of the widget.
	  (Priv::on_func_arg_visited_signal()): when stepping in the same
	  function, while walking a function arguments variable, check if the
	  function args subtree (in the widget) is empty. If the subtree is
	  empty, append the variable the function arguments subtree.
	  Otherwise, if you try to 'update' an empty subtree, you will get an
	  error message saying "could not find variable in inspector: foo".
	  The root reason why the subtree is empty in the first place, is that
	  it must be populated by a call to debugger->list_frames_arguments().
	  Problem is that for some unknown reason, that call fails often, due
	  do GDB suckage.
	  This should fix bug #499873 – Variable 'this' not found.

2008-06-19 Dodji Seketeli <dodji@gnome.org>

	* tests/Makefile: don't call the binary gtkmm-test but rather
	  gtkmmtest to comply with the other binaries names. Let's be
	  homogeneous :-)

2008-06-19 Dodji Seketeli <dodji@gnome.org>

	* src/persp/dbgperspective/nmv-dbg-perspective.cc: 