@@ -1,3 +1,8 @@
+2008-06-21 Dodji Seketeli <dodji@gnome.org>
+
+	* src/common/Makefile.am: Don't install libnemivercommon.pc.
+	  This should fix #534990.
+
 2008-06-20 Dodji Seketeli <dodji@gnome.org>
 
 	* src/common/nmv-conf-manager.cc, src/common/nmv-log-stream.cc,
